--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 body{
     background-image: url("Champions-League.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 .container{
