--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 
 body{
     background-image: url("Champions-League.jpg");
+    /* background-position: center center; */
+    background-repeat: no-repeat;
+    /* background-attachment: fixed; */
+    background-size: cover;
+    background-color: black;
 }
 
 .container{
@@ -37,14 +42,24 @@ body{
 /* ************************* */
 
 .dropdown-trigger{
-    margin-left: 35%;
+    margin-left: 10%;
     background-color: darkslategray;
+    width: 80%;
+    padding: 0;
 }
 
 #selectedTeam2{
     /* margin-left: 28%; */
     margin-top: 50%; 
     background-color: midnightblue;
+}
+#dateText, #winnerText, #scoreText,#stageText{
+    color: lightskyblue;
+    font-weight: bolder;
+}
+
+#date,#winner,#score,#stage{
+    color:white;
 }
 #selectedTeam1{
     margin-top: 50%;
@@ -53,4 +68,41 @@ body{
 #goBtn{
     margin-top: 50%;
     margin-left:10%;
+}
+
+.modal {
+
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0, 0.4);
+}
+
+.modal-content{
+    /* background-color: #fefefe; */
+    background-color: midnightblue;
+    color: lightgrey;
+    margin: 15%;
+    padding: 20px;
+    border: 3px solid #888888;
+    width: 70%;
+}
+
+.close {
+    color: black;
+    float: right;
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 2%;
+}
+
+@media screen and (max-width: 768px){
+    .dropdown-trigger{
+        font-size: x-small;
+    }
 }
