--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     background-image: url("Champions-League.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
+    background-color: black;
 
 }
 
