--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 
 body{
     background-image: url("Champions-League.jpg");
-
+    /* background-position: center center; */
+    background-repeat: no-repeat;
+    /* background-attachment: fixed; */
+    background-size: cover;
+    background-color: black;
+}
 
 .container{
     width: 90%;
